refactor: IDEA 警告修复及代码清理